# dst_predict

./: .envrc  .gitignore  pyproject.toml
notebook/: dst.ipynb  etl.ipynb
noteboook/: dst.ipynb  etl.ipynb
src/dst_predict/: __init__.py  main.py
src/dst_predict/imports/: etl.py  window.py
src/dst_predict/includes/: graphics.py  jax.py  sklern.py
