[project]
name = "dst_predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jax>=0.9.0.1",
    "jaxkan>=0.3.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
dst-predict = "dst_predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
